Show username beneath roast title. fixed some layout issues with the roast-score. Fixes #34

--- a/client/stylesheets/module/_content.scss
+++ b/client/stylesheets/module/_content.scss
@@ -26,7 +26,6 @@
 		color: white;
 		font-size: 24px;
 		line-height: 32px;
-		margin: 0 0 30px;
 	}
 
 	h3 {
